--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -7,7 +7,7 @@
 
   <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
     <li class="ms-3">
-      <a class="text-muted" href="https://github.com/bolu-tife">
+      <a class="text-muted" href="https://github.com/bolu-tife/video-conferencing-app.git">
         <i class="bi bi-github" ></i>
         
     </li>
